--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -13,6 +13,10 @@
   border: 1px solid #707070;
   background-color: white;
   padding: 1rem;
+  min-height: 95vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .section {
@@ -23,15 +27,18 @@
 
 .appTitle{
   text-align: center;
+  margin-bottom: 10px;
 }
 
 .pageTitle {
   text-align: center;
   text-decoration: underline;
+  margin-bottom: 20px;
 }
 
 .content {
   margin-left: 5px;
+  font-size: 1.25rem;
 }
 
 .contentText {
@@ -51,6 +58,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  justify-self: flex-end;
 }
 
 .footerDirections {
@@ -62,5 +70,6 @@
 
 .footerArrowTitle {
   margin-top: 5px;
+  font-size: 1.25rem;
 }
 
