Style changes to the bullet points

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -41,8 +41,13 @@
   font-size: 1.25rem;
 }
 
+.contentTitle {
+  list-style-type: none;
+}
+
 .contentText {
   margin-top: 5px;
+  margin-bottom: 20px;
 }
 
 .primaryTextColorBold {
